--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "tradingview-webhook",
   "version": "1.0.0",
-  "description": "TradingView webhook bridge",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.6.0",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2"
   }
 }
